<resources>
    <string name="app_name">GeoDroid</string>
    <string name="mainActivityStart_createSession">Create Session</string>
    <string name="mainActivityStart_existingSession">Existing Session</string>
    <string name="listViewSessionName">Available Sessions</string>
    <string name="createSession_name">Name</string>
    <string name="sessionMenu_sessionName">Session:</string>
    <string name="sessionMenu_newRegistration">New Regist</string>
    <string name="sessionMenu_data">Data</string>
    <string name="sessionMenu_statistics">Statistics</string>
    <string name="sessionMenu_map">Map</string>
    <string name="sessionMenu_send">Send to Server</string>
    <string name="createSession_button_create">Create</string>
    <string name="title_activity_data_map">Map</string>
    <string name="data_table_head_id">Id</string>
    <string name="data_table_head_dir">Dir</string>
    <string name="data_table_head_inc">Inc</string>
    <string name="data_table_head_pers">Pers</string>
    <string name="data_table_head_aper">Aper</string>
    <string name="data_table_head_roug">Roug</string>
    <string name="data_table_head_infil">Infil</string>
    <string name="data_table_head_weat">Weat</string>
    <string name="listSessionHelpMessage">Select one existing session or...\\nLong press in one session to delete the respectives discontinuities.</string>
    <string name="listSession_help">Help</string>
    <string name="login_authenticating">Authenticating...</string>
    <string name="login_wellcome">Wellcome again</string>
    <string name="login_authenticated">Autheticated!</string>
    <string name="login_wellcome_to_geodroid">Wellcome </string>
    <string name="mainActivity_sessions">Sessions</string>
    <string name="mainActivity_addSession">Add Session</string>
    <string name="compass_btn_adquire">Adquire</string>
    <string name="compass_msg_loction_not_available">Location is not available, do you want proceed?</string>
    <string name="compass_positive_btn">Yes</string>
    <string name="compass_negative_btn">No</string>
    <string name="compass_compass_not_suported">Compass not suported in this device!</string>
    <string name="extradata_persistence">Persistence (m)</string>
    <string name="extradata_aperture">Aperture (mm)</string>
    <string name="extradata_roughness">Roughness</string>
    <string name="extradata_infilling">Infilling (mm)</string>
    <string name="extradata_weathering">Weathering</string>
    <string name="extradata_classification">Classification</string>
    <string name="extradata_roughness_very">Very</string>
    <string name="extradata_rougness_rough">Rough</string>
    <string name="extradata_roughness_slighty">Slighty</string>
    <string name="extradata_roughness_smooth">Smooth</string>
    <string name="extradata_roughness_slickensided">Slickensided</string>
    <string name="extradata_infilling_none">None</string>
    <string name="extradata_infilling_hard_less5mm">Hard Fill &lt;5</string>
    <string name="extradata_infilling_hard_gt5mm">Hard Fill &gt;5</string>
    <string name="extradata_infilling_soft_lt5mm">Soft &lt;5</string>
    <string name="extradata_infilling_soft_gt5mm">Soft &gt;5</string>
    <string name="extradata_weathering_unweathered">Unweathered</string>
    <string name="extradata_weathering_slighty">Slighty</string>
    <string name="extradata_weathering_moderate">Moderate</string>
    <string name="extradata_weathering_highly">Highly</string>
    <string name="extradata_weathering_decomposed">Decomposed</string>
    <string name="extradata_no_localization">(Coordinates not available)</string>
    <string name="extradata_localization">"Localization: "</string>
    <string name="extradata_session">Session:</string>
    <string name="extradata_note_edit_description">Note</string>
    <string name="extradata_save_button">Save</string>
    <string name="login_sign_in">Sign in</string>
    <string name="compass_session">Session:</string>
    <string name="deleted_discontinuity">Removed discontinuities and session! </string>
    <string name="deleted_discontinuity_notSession">Deleted discontinuities of the session, but not the session itself, because other users still have discontinuities in that session!</string>


</resources>
