<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallp"
    tools:context="com.example.ps.geodroidapp.Activities.SessionMenu"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <ImageButton
        android:id="@+id/imageButton_share"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:scaleType="fitCenter"
        android:background="@android:color/transparent"
        app:srcCompat="@drawable/button_share"
        tools:layout_editor_absoluteX="323dp"
        tools:layout_editor_absoluteY="16dp"
        android:layout_marginTop="16dp"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/session_menu_button_new_regist" />

    <TextView
        android:id="@+id/session_menu_tv_session_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="TextView"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textSize="24sp"
        android:layout_marginEnd="10dp"
        android:layout_alignTop="@+id/imageButton_share"
        android:layout_alignEnd="@+id/imageButton_upload" />

    <Button
        android:id="@+id/session_menu_button_new_regist"
        android:layout_width="240dp"
        android:layout_height="60dp"
        android:layout_weight="0.34"
        android:text="@string/sessionMenu_newRegistration"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/session_menu_button_sessiondata"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/session_menu_tv_session_name"
        app:layout_constraintVertical_chainStyle="packed"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/imageButton_share"
        android:layout_alignStart="@+id/session_menu_button_sessiondata" />

    <Button
        android:id="@+id/session_menu_button_sessiondata"
        android:layout_width="238dp"
        android:layout_height="60dp"
        android:layout_weight="0.11"
        android:text="@string/sessionMenu_data"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:layout_marginTop="26dp"
        android:layout_below="@+id/session_menu_button_new_regist"
        android:layout_alignStart="@+id/session_menu_button_map" />

    <Button
        android:id="@+id/session_menu_button_statistics"
        android:layout_width="236dp"
        android:layout_height="60dp"
        android:layout_weight="0.17"
        android:text="@string/sessionMenu_statistics"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:layout_below="@+id/session_menu_button_map"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp" />

    <Button
        android:id="@+id/session_menu_button_map"
        android:layout_width="238dp"
        android:layout_height="60dp"
        android:layout_weight="0.16"
        android:text="@string/sessionMenu_map"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:layout_marginTop="18dp"
        android:layout_below="@+id/session_menu_button_sessiondata"
        android:layout_alignStart="@+id/session_menu_button_statistics" />

    <ImageButton
        android:id="@+id/imageButton_upload"
        android:layout_width="84dp"
        android:layout_height="76dp"
        android:background="@android:color/transparent"
        android:scaleType="fitCenter"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@+id/session_menu_button_map"
        app:srcCompat="@drawable/image_upload_btn"
        tools:layout_editor_absoluteY="372dp"
        android:layout_marginBottom="25dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sessionMenu_sessionName"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginEnd="13dp"
        android:layout_alignBottom="@+id/session_menu_tv_session_name"
        android:layout_toStartOf="@+id/session_menu_tv_session_name" />


</RelativeLayout>
